# youte_talk

./: .gitignore  LICENSE  README.md  pyproject.toml
youte_talk/: cli.py  scraper.py  transcriber.py  whisper.py
