[tool.poetry]
name = "youte_talk"
version = "0.1.0"
description = "A command-line tool for transcribing YouTube videos."
authors = ["Mat Bettinson <mat.bettinson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
openai-whisper = "^20230314"
youtube-dl = { git = "https://github.com/ytdl-org/youtube-dl.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtalk = 'youte_talk.cli:main'

